--- a/index.html
+++ b/index.html
@@ -7,26 +7,39 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
               sans: ['"Noto Sans TC"', 'sans-serif'],
+              serif: ['"Playfair Display"', 'serif'],
             },
             colors: {
               rose: {
-                50: '#fff1f2',
-                100: '#ffe4e6',
-                200: '#fecdd3',
-                300: '#fda4af',
-                400: '#fb7185',
-                500: '#f43f5e',
-                600: '#e11d48', // Rose Gold-ish darker
+                50: '#fff0f3',
+                100: '#ffe3e8',
+                200: '#ffc9d4',
+                300: '#ff9eb0',
+                400: '#ff6b8b',
+                500: '#f43f68',
+                600: '#e11d4e',
+                800: '#9f1239',
+                900: '#881337',
               },
-              primary: '#e11d48',
-              secondary: '#64748b',
+              champagne: {
+                100: '#fcf8e8',
+                200: '#f7efc9',
+                300: '#ebd896',
+                400: '#e0c060',
+                500: '#d4a736',
+              }
+            },
+            backgroundImage: {
+              'luxury-gradient': 'linear-gradient(135deg, #FFF5F7 0%, #FFF0F5 50%, #FFE4E6 100%)',
+              'glass': 'linear-gradient(145deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.6) 100%)',
+              'shimmer': 'linear-gradient(45deg, rgba(255,255,255,0) 40%, rgba(255,255,255,0.5) 50%, rgba(255,255,255,0) 60%)',
             }
           }
         }
@@ -34,7 +47,12 @@
     </script>
     <style>
       body {
-        background-color: #FDF2F8; /* Soft pink bg */
+        background: #fff0f5;
+        background-image: 
+          radial-gradient(at 0% 0%, hsla(340, 82%, 96%, 1) 0, transparent 50%), 
+          radial-gradient(at 50% 100%, hsla(340, 82%, 96%, 1) 0, transparent 50%), 
+          radial-gradient(at 100% 0%, hsla(35, 100%, 96%, 1) 0, transparent 50%);
+        background-attachment: fixed;
       }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
@@ -44,6 +62,18 @@
       .no-scrollbar {
           -ms-overflow-style: none;  /* IE and Edge */
           scrollbar-width: none;  /* Firefox */
+      }
+      
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.8);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.03);
+      }
+      
+      .text-glow {
+        text-shadow: 0 0 20px rgba(255, 107, 139, 0.3);
       }
     </style>
   <script type="importmap">
