--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+    
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>My Skin Diary (Noble Edition)</title>
+
+    <link rel="apple-touch-icon" href="https://i.ibb.co/4ZCSZv4G/Gemini-Generated-Image-7nlvrk7nlvrk7nlv.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.ibb.co/4ZCSZv4G/Gemini-Generated-Image-7nlvrk7nlvrk7nlv.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,9 +55,9 @@
     <style>
       body {
         background: #fff0f5;
-        background-image: 
-          radial-gradient(at 0% 0%, hsla(340, 82%, 96%, 1) 0, transparent 50%), 
-          radial-gradient(at 50% 100%, hsla(340, 82%, 96%, 1) 0, transparent 50%), 
+        background-image:
+          radial-gradient(at 0% 0%, hsla(340, 82%, 96%, 1) 0, transparent 50%),
+          radial-gradient(at 50% 100%, hsla(340, 82%, 96%, 1) 0, transparent 50%),
           radial-gradient(at 100% 0%, hsla(35, 100%, 96%, 1) 0, transparent 50%);
         background-attachment: fixed;
         /* Safe area handling for notched iPhones in standalone mode */
